--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,23 +1,18 @@
 {
-  "name": "reason-phoenix",
-  "version": "0.1.6",
-  "sources": [
-    {
-      "dir" : "src",
-      "subdirs" : true
-    },
-    {
-      "dir": "example"
-    }
-  ],
+  "name": "rescript-phoenix",
+  "version": "1.6.2",
+  "sources": {
+    "dir" : "src",
+    "subdirs" : true
+  },
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
+  "bs-dependencies": [],
   "warnings": {
     "error" : "+101"
   },
-  "namespace": true,
-  "refmt": 3
+  "reason": { "react-jsx": 3 }
 }
