--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "reason-phoenix",
-  "version": "0.1.8",
+  "name": "rescript-phoenix",
+  "version": "1.6.2",
   "scripts": {
     "build": "rescript build",
     "start": "rescript build -w",
     "clean": "rescript "
   },
   "keywords": [
-    "BuckleScript"
+    "rescript",
+    "phoenix"
   ],
-  "author": "",
+  "author": "Ilya Kozlov <i.kozlov.dev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^8.2.0",
@@ -20,6 +21,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/celsobonutti/reason-phoenix.git"
+    "url": "https://github.com/ilyakozlovdev/rescript-phoenix.git"
   }
 }
