--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rescript-phoenixjs",
-  "version": "1.6.2-fix1",
+  "version": "1.6.6-alpha",
   "scripts": {
     "build": "rescript build",
     "start": "rescript build -w",
@@ -13,12 +13,10 @@
   "author": "Ilya Kozlov <i.kozlov.dev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^8.2.0",
     "rescript": "^9.1.4"
   },
   "dependencies": {
-    "npmrc": "^1.1.1",
-    "phoenix": "^1.5.4"
+    "phoenix": "^1.6.6"
   },
   "repository": {
     "type": "git",
